<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Debug">

    <ScrollView
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.1">






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"

                        android:text="@string/logging_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/logging_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"
                        android:onClick="onStartStopLoggingService" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"

                        android:text="@string/zipUpload_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/zipUpload_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"
                        android:onClick="onStartStopZipUploadService" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"

                        android:text="@string/sensorDataSaving_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/sensorDataSaving_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"
                        android:onClick="onStartStopSensorDataSavingService" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/lighterBluetooth_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/lighterBluetooth_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"
                        android:onClick="onStartStopBluetoothService" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/messageSender_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/messageSender_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"
                        android:onClick="onStartStopMessageSenderService" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.8"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text=""/>

            <!-- line
            <View android:id="@+id/primerdivisor"
                  android:layout_height="2dp"
                  android:layout_width="fill_parent"
                  android:background="#ff6000" />
            -->

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/send_impl_intent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="send implicit intent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

                <Button
                    android:id="@+id/send_impl_intent_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="sendImplicitIntent"
                    android:text="rauchen annotieren (2startScreen)"/>
                <TextView
                    android:id="@+id/live_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/live_view"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

                <Button
                    android:id="@+id/startLiveLogging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="onStartLiveScreen"
                    android:text="@string/open_live_logging"/>

                <TextView
                    android:id="@+id/message_to_wearable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/sendMessageToWearable"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

                <Button
                    android:id="@+id/sendMessageToWearble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="onSendMessageToWearable"
                    android:text="@string/onSendMessageToWearable"/>

                <TextView
                    android:id="@+id/object_to_wearable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/sendObjectToWearable"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

                <Button
                    android:id="@+id/sendObjectToWearble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="onSendDataObjectToWearable"
                    android:text="@string/onSendObjectToWearable"/>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>