<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"

	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".StartScreen">

	<ScrollView
	android:id="@+id/scrollView"
	android:fillViewport="true"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:weightSum="1.0">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:layout_weight="0.1">


				<TextView
					android:id="@+id/welcome_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal"
					android:paddingBottom="10dp"
					android:paddingTop="10dp"
					android:text="@string/welcome_placeholer"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold"/>

				<Button
					android:id="@+id/annotate_smoking"
					android:layout_width="match_parent"
					android:layout_height="100dp"
					android:onClick="annotate"
					android:text="@+string/annotateSmoking" />
                    <!-- android:elevation="5dp" -->

                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"

                        android:text="@string/logging_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/logging_service_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/service_stopped"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#ff6000"/>

                </LinearLayout>
                -->

                <ToggleButton
                    android:id="@+id/toggleLogging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_log_on"
                    android:textOff="@string/toggle_log_off"
                    android:onClick="onToggleClicked"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:context=".StartScreen">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"

                        android:text="@string/sensor_event"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_weight="9"/>

                    <TextView
                        android:id="@+id/id_sensor_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="..."
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:textColor="#74565656"/>

                </LinearLayout>




            </LinearLayout>

            <TextView
				android:id="@+id/textView4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_weight="0.8"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text=""/>

			<!-- line
			<View android:id="@+id/primerdivisor"
			      android:layout_height="2dp"
			      android:layout_width="fill_parent"
			      android:background="#ff6000" />
			-->

            <LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="0.1"
				android:layout_alignParentBottom="true"
				android:layout_alignParentStart="true">


                <TextView
					android:id="@+id/upload_data"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingBottom="10dp"
					android:paddingTop="10dp"
					android:text="@string/manual_data_upload"
					android:textAppearance="?android:attr/textAppearanceLarge"/>

				<LinearLayout
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:weightSum="1"
					android:layout_alignParentBottom="true"
					android:layout_alignParentStart="true">

					<Button
						android:id="@+id/crunch"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:onClick="triggerManualDataUpload"
						android:layout_weight="1.5"
						android:text="@string/trigger_manual_data_upload"/>
                        <!-- android:elevation="5dp"/> -->

					<LinearLayout
						android:orientation="vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="0"
						android:weightSum="1"
						android:layout_alignParentBottom="true"
						android:layout_alignParentStart="true">

						<TextView
							android:id="@+id/data_to_upload"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:paddingTop="3dp"
							android:layout_weight="0.5"
							android:text="@string/data_to_upload"
							android:textAppearance="?android:attr/textAppearanceSmall"/>

						<TextView
							android:id="@+id/amaount_of_data_to_upload"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="0.5"
							android:text="0 MB"
							android:textAppearance="?android:attr/textAppearanceLarge"
                            android:longClickable="true" />
					</LinearLayout>

				</LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1">

                <TextView
                    android:id="@+id/uploaded_this_session"
                    android:layout_weight="0.04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/uploaded_this_session"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                <TextView
                    android:id="@+id/num_uploaded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="0"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                </LinearLayout>

            </LinearLayout>
		</LinearLayout>
	</ScrollView>


</RelativeLayout>